# sd-google-news-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 06d0ae9a23fc_initial.py
docs/: mvp-scope.md  system-design.md
src/google_news/: __init__.py  config.py  database.py  main.py
src/google_news/models/: __init__.py  _types.py  article.py  story.py  user_event.py  user_profile.py
src/google_news/routers/: __init__.py  articles.py  events.py  feed.py  health.py  search.py  stories.py  users.py
src/google_news/schemas/: __init__.py  article.py  event.py  feed.py  search.py  story.py  user.py
src/google_news/services/: __init__.py  cluster_service.py  event_service.py  feed_service.py  redis_client.py  search_service.py
tests/: conftest.py
tests/functional/: test_articles.py  test_events.py  test_feed.py  test_search.py  test_stories.py  test_users.py
tests/unit/: test_cluster_service.py  test_feed_ranking.py  test_health.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_feed.py  test_fr2_stories.py  test_fr3_search.py  test_fr4_preferences.py  test_fr5_ingest.py  test_fr6_events.py  test_fr7_healthz.py  test_fr8_clustering.py
