[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-news"
version = "0.1.0"
description = "Google News MVP — personalized news aggregation and ranking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "pydantic-settings>=2.3.0,<3.0",
    "redis>=5.2.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "scikit-learn>=1.5.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.8.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
ignore = ["B008"]
